# ghydrate

./: LICENSE  README.md  pyproject.toml
ghydrate/: __init__.py  __main__.py  cli.py
tests/: test_ghydrate.py
