[tool.poetry]
name = "ghydrate"
version = "1.0.0"
description = ""
authors = ["Arsero <54241944+Arsero@users.noreply.github.com>"]

[tool.poetry.scripts]
ghydrate = "ghydrate.__main__:main"

[tool.poetry.dependencies]
python = "^3.9.12"
typer = "^0.6.1"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
